--- a/PR005-IntentsExplicitos/app/build.gradle
+++ b/PR005-IntentsExplicitos/app/build.gradle
@@ -27,11 +27,14 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "androidx.appcompat:appcompat:1.1.0-alpha02"
-    testImplementation "junit:junit:4.12"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.1.2-alpha01"
-    androidTestImplementation "androidx.test.espresso:espresso-intents:3.1.2-alpha01"
-    androidTestImplementation "androidx.test:runner:1.1.2-alpha01"
-    androidTestImplementation "androidx.test:rules:1.1.2-alpha01"
-}
+    implementation "androidx.appcompat:appcompat:1.1.0-alpha05"
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.2.0'
 
+    testImplementation "junit:junit:4.12"
+
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.2.0-beta01"
+    androidTestImplementation "androidx.test.espresso:espresso-intents:3.2.0-beta01"
+    androidTestImplementation "androidx.test:runner:1.2.0-beta01"
+    androidTestImplementation "androidx.test:rules:1.2.0-beta01"
+}
