--- a/PR004-IntentsImplicitos/app/src/main/AndroidManifest.xml
+++ b/PR004-IntentsImplicitos/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:tools="http://schemas.android.com/tools"
-          package="es.iessaladillo.pedrojoya.PR004">
+          package="es.iessaladillo.pedrojoya.pr004">
 
     <uses-permission android:name="android.permission.CALL_PHONE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
